# hackathon-ai-api

./: .dockerignore  .editorconfig  .gitignore  LICENSE  README.md  install.sh  pyproject.toml  runner.sh  service.sh  tools.sh
app/: runner.py  service.py  settings.py  system.py
app/commands/: __init__.py  database.py  system.py
app/database/gateway/: example.py
app/database/models/postgres/: __init__.py  example.py
app/database/schemas/postgres/: 43556be7b390_.py
app/database/seeds/postgres/: example.py
app/handlers/: __init__.py  base.py  hackathon.py  health.py  index.py  security.py
app/handlers/databases/: handlers.py  schemas.py
app/handlers/example/: handlers.py  schemas.py
app/middlewares/: __init__.py  metadata.py
app/modules/: genai.py
app/modules/database/: logging.py  module.py  settings.py  sqlmodel.py
app/modules/database/alembic/: env.py  migrate.py  script.py.mako
app/modules/system/: click.py  fastapi.py  security.py
app/scripts/: test_genai_client.py
app/templates/: index.html  unlock.html
docs/: description.md
setup/: deprecations.pth  deprecations.sh  supervisor.sh
setup/templates/supervisor/conf.d/: service.conf
